--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
+<html lang="en">
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+@@ -7,15 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>vai ser uma imagem</h1>
-   <img class="cabecalho-imgem" src="robo.png" alt="">
-   <ul>
-        <li>Estudante</li>
-        <li>Escola</li>
-    </ul> 
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="tecnologia.png" alt="logo curso Programação">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
+        </ul>
+   <header class="cabecalho">
+        <h1>vai ser uma imagem</h1>
+        <img class="cabecalho-imagem" src="tecnologia.png" alt="">
+        <ul class="cabecalho-lista-item">
+         <li class="cabecalho-lista-item">Estudante</li>
+         <li class="cabecalho-lista-item">Escola</li>
+        </ul> 
+    </header>
+
     
 </body>
+</html>
+
+
 </html>
