--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
-<html lang="en">
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-@@ -7,15 +8,14 @@
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="tecnologia.png" alt="logo curso Programação">
-        <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
-        </ul>
-   <header class="cabecalho">
-        <h1>vai ser uma imagem</h1>
-        <img class="cabecalho-imagem" src="tecnologia.png" alt="">
-        <ul class="cabecalho-lista-item">
-         <li class="cabecalho-lista-item">Estudante</li>
-         <li class="cabecalho-lista-item">Escola</li>
-        </ul> 
-    </header>
+    <img class="cabecalho-imagem" src="tecnologica.png" alt="">
+    <ul class="cabecalho-lista-item">
+    <li class="cabecalho-lista-item">estudante</li>
+    <li class="cabecalho-lista-item">escola</li>
+</ul>
+     </header>
+     <section class="escola">
+        <h2 class="escola-titulo">sobre a escola </h2>
+            <p class="escola-texto-um">Curso de pagina web: utilizando HTML e CSS
+                para construir um site criativo</p>
+            <p class="escola-texto-dois">entenda porque precisamos prototipar 
+                um site antes de começar a desenvolvê-lo;</p>
+            <p class="escola-texto-tres">conheça os recursos de display flex e grid para 
+                organizar a sua pagina;</p>
+                <p class="escola-texto-quatro">aprenda a compartilhar seu projeto dentro do github;</p>
+                <p class="escola-texto-cinco">Utilize sua criatividade para construir seu
+                    própio site.</p>
+                    <div>
+                    <img class="escol-imagem" src="desktop computer-bro.png" width="400" alt="">
+     </section>
+    </div>
 
-    
 </body>
-</html>
-
-
 </html>
